--- a/src/app/admin-panel/add-document-links/add-document-links.component.html
+++ b/src/app/admin-panel/add-document-links/add-document-links.component.html
@@ -12,8 +12,10 @@
                     <input matInput autofocus ngModel formControlName="title" name="title">
                 </mat-form-field>
                 <mat-form-field appearance="outline">
-                    <mat-label>Notes</mat-label>
-                    <textarea matInput rows="5" formControlName="notes" name="notes"></textarea>
+                    <mat-label>Tags</mat-label>
+                    <mat-select formControlName="tags" name="tags" multiple>
+                        <mat-option *ngFor="let tag of tagsData" [value]="tag">{{tag}}</mat-option>
+                    </mat-select>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
@@ -37,34 +39,75 @@
 
         </div>
         <div class="col-md-6">
-            <h3>View Documents</h3>
-            <mat-form-field>
-                <mat-label>Select Category Teaching</mat-label>
-                <mat-select [(ngModel)]="category">
-                    <mat-option [value]="category" (click)="fetchDocumentsData(category)"
-                        *ngFor="let category of categories">
-                        {{category}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <br>
-            <br>
 
-            <div *ngFor="let list of documentsData">
-                <mat-card>
-                    <span style="float: right;">
-                        <button [routerLink]="['/view-document']" [queryParams]="{url:list.fileUrl}" color="accent"
-                            mat-fab>
-                            <i class="material-icons">
-                                visibility
-                            </i>
-                        </button>
-                    </span>
-                    <h4>{{list.title}}</h4>
-                    <p><b>Notes:</b>{{list.notes}}</p>
-                    <p><b>Shared by:</b> {{list.ownerName}}</p>
-                    <p class="date-font"> {{list.createdAt | date: 'medium'}}</p>
-                </mat-card>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <mat-form-field>
+                        <mat-label>Select Category Teaching</mat-label>
+                        <mat-select [(ngModel)]="category">
+                            <mat-option [value]="category" (click)="fetchDocumentsData(category)"
+                                *ngFor="let category of categories">{{category}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
             </div>
+
+            <!-- <div class="row"> -->
+            <!-- <div class="col-md-12"> -->
+            <div *ngIf="documentsData">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <mat-form-field>
+                            <input type="text" matInput placeholder="Search anything..." [(ngModel)]="keyword"
+                                autocomplete="off" />
+                        </mat-form-field>
+
+                    </div>
+                    <div class="col-sm-6">
+                        <mat-form-field>
+                            <mat-label>Tags</mat-label>
+                            <mat-select>
+                                <mat-option (click)="ApplyFilter(tag)" *ngFor="let tag of tagsData" [value]="tag">
+                                    {{tag}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+
+                    </div>
+                </div>
+                <div *ngFor="let list of documentsData | filter:keyword">
+                    <mat-card>
+                        <span style="float: right;">
+                            <button [routerLink]="['/view-document']" [queryParams]="{url:list.fileUrl}" color="accent"
+                                mat-fab>
+                                <i class="material-icons">
+                                    visibility
+                                </i>
+                            </button>
+                        </span>
+                        <h4>{{list.title}}</h4>
+                        <p><b>Shared by:</b> {{list.ownerName}}</p>
+                        <mat-chip-list>
+                            <b>Tags:</b>
+                            <mat-chip *ngFor="let tag of list.tags" class="">{{tag | lowercase}}</mat-chip>
+                        </mat-chip-list>
+                        <i id="delete" (click)="deleteDocument(list)" class="material-icons">
+                            delete
+                        </i>
+                        <p class="date-font"> {{list.createdAt | date: 'medium'}}</p>
+
+                    </mat-card>
+                    <br>
+                </div>
+            </div>
+            <div style="text-align: center;" *ngIf="!documentsData">
+                <p class="alert alert-warning"> Search for data</p>
+            </div>
+            <!-- </div> -->
+            <!-- </div> -->
+
+
 
 
         </div>
